--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,11 +1,14 @@
 ---
 import Categories from "./Categories.astro";
 import RecentPosts from "./RecentPosts.astro";
+import RandomCompendium from "./RandomCompendium.astro";
+
+const { show = "dispatches", count = 5 } = Astro.props;
 ---
 
 <div class="sidebar-content" role="complementary" aria-label="Sidebar">
-  <RecentPosts />
-  <Categories />
+  {show === "compendium" ? <RandomCompendium count={count} /> : <RecentPosts />}
+  {show === "dispatches" && <Categories />}
 </div>
 
 <style>
