--- a/src/pages/compendium/[slug].astro
+++ b/src/pages/compendium/[slug].astro
@@ -21,7 +21,9 @@ const { Content } = await entry.render();
   title={entry.data.title}
   description={entry.data.description}
   type="article"
-  showSidebar={false}
+  showSidebar={true}
+  sidebarMode="compendium"
+  sidebarCount={5}
 >
   <article class="compendium-entry">
     <header class="entry-header">
