--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../components/Layout.astro";
+import CompendiumWidget from "../components/CompendiumWidget.astro";
 import { slugifyPath } from "../utils/slugify";
+import { getCollection } from "astro:content";
 
 const mdPostsGlob = import.meta.glob("../content/dispatches/*.md", {
   eager: true,
@@ -37,6 +39,14 @@ const sortedPosts = allPosts
       new Date(a.frontmatter.datePublished).getTime()
   )
   .slice(0, 3);
+
+const compendiumEntries = (await getCollection("compendium"))
+  .filter((entry) => !entry.data.draft)
+  .map((entry) => ({
+    slug: entry.slug,
+    title: entry.data.title,
+    description: entry.data.description,
+  }));
 ---
 
 <Layout
@@ -131,6 +141,8 @@ const sortedPosts = allPosts
         </div>
       </div>
     </section>
+
+    <CompendiumWidget entries={compendiumEntries} count={6} />
 
     <section class="features" id="features">
       <div class="container">
