--- a/src/components/HeaderSearch.astro
+++ b/src/components/HeaderSearch.astro
@@ -128,7 +128,7 @@
       if (searchResults) {
         searchResults.innerHTML = `
           <div class="search-no-results">
-            <p>No content found for "${query}"</p>
+            <p>No articles found for "${query}"</p>
           </div>
         `;
       }
