Revert "Merge branch 'main' of https://github.com/CodeAndHammer/konscio"
This reverts commit 830017aab806f1b1f79d886e37a73bfbc19ae66b, reversing
changes made to eb99fbcf066dd1b7a9958d3cd74199da39d654d4.

--- a/src/components/HeaderSearch.astro
+++ b/src/components/HeaderSearch.astro
@@ -5,9 +5,9 @@
         type="text"
         class="search-input"
         id="search-input"
-        placeholder="Search all content..."
+        placeholder="Search articles..."
         autocomplete="off"
-        aria-label="Search all content"
+        aria-label="Search articles"
       />
       <button class="search-close" id="search-close" aria-label="Close search">
         <svg
